Initial work-in-progress commit to enable support for custom snapshot comparators and reporters